[package]
name = "android-launcher"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Android launcher for windows only (maybe), it launch your android without additional terminal/shell session"

[[bin]]
name = "android-launcher"
path = "src/main.rs"

[dependencies]
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dotenvy = "0.15.7"
duct = "0.13.7"
once_cell = "1.20.2"
